--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,13 +3,18 @@
   padding: 0;
 }
 
-.main {
+.animals {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 0 5rem 5rem 5rem;
+  margin-left: 5rem;
   padding: 0;
+  width: 60%;
 }
+
+/* .sidebar {
+
+} */
 
 h1 {
   margin: 1rem 0 2rem 5rem;
